# EGM_bumper

./: CMakeLists.txt  README.md  nodelet_definition.xml  package.xml
config/: egm.yaml  params.default.yaml
launch/: egm.launch
rviz/: egm.rviz
scripts/: orig_virtual_bumper.yaml  virtual_bumper.yaml  virtual_bumper_start.sh
src/: main.cpp  main.hpp
